--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.0.1",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
+    "eslint-config-next": "^13.4.5",
     "formik": "^2.4.1",
-    "next": "13.4.4",
+    "next": "^13.4.5",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-query": "^2.26.4",
     "react-select": "^5.7.3",
     "tailwindcss": "3.3.2"
   }
