--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@material-tailwind/react": "^2.0.1",
+    "@material-tailwind/react": "^2.0.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-devtools": "^4.29.12",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^2.26.4",
+    "react-redux": "^8.1.0",
     "react-select": "^5.7.3",
     "tailwindcss": "3.3.2"
   }
