--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.0.3",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-devtools": "^4.29.12",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "^13.4.5",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.1",
     "next": "^13.4.5",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.24",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.3.3",
     "react-query": "^2.26.4",
     "react-redux": "^8.1.0",
     "react-select": "^5.7.3",
