--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query-devtools": "^4.29.12",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "^13.4.5",
     "file-saver": "^2.0.5",
     "formik": "^2.4.1",
-    "next": "^13.4.5",
+    "next": "^13.4.19",
     "next-redux-wrapper": "^8.1.0",
     "postcss": "8.4.24",
     "raw-loader": "^4.0.2",
@@ -33,6 +35,11 @@
     "react-query": "^2.26.4",
     "react-redux": "^8.1.0",
     "react-select": "^5.7.3",
+    "react-slider": "^2.0.6",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "@types/react-slider": "^1.3.1",
+    "typescript": "^5.2.2"
   }
 }
