--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-query": "^2.26.4",
     "react-redux": "^8.1.0",
     "react-select": "^5.7.3",
+    "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
