--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-pdf": "^7.3.3",
     "react-query": "^2.26.4",
     "react-redux": "^8.1.0",
