--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-pdf": "^7.3.3",
     "react-query": "^2.26.4",
     "react-redux": "^8.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.7.3",
     "react-slick": "^0.29.0",
     "react-slider": "^2.0.6",
