--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query-devtools": "^4.29.12",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "apexcharts": "^3.44.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
@@ -30,6 +31,7 @@
     "postcss": "8.4.24",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.2.0",
     "react-pdf": "^7.3.3",
